--- a/devops/nginx-proxy-manager/docker-compose.yml
+++ b/devops/nginx-proxy-manager/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
   nginx-manager:
     container_name: nginx-manager
-    image: jc21/mariadb-aria:latest
+    image: jc21/nginx-proxy-manager:latest
     restart: always
     ports:
       - "80:80"
@@ -23,6 +23,7 @@ services:
   db:
     container_name: mysql
     image: jc21/mariadb-aria:latest
+    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: "npm"
       MYSQL_DATABASE: "npm"
