--- a/devops/portainer/docker-compose.yml
+++ b/devops/portainer/docker-compose.yml
@@ -10,4 +10,4 @@ services:
       - "8000:8000"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
-      - "portainer_data:/data"
+      - "./data/portainer:/data"
