--- a/devops/jenkins/Dockerfile
+++ b/devops/jenkins/Dockerfile
@@ -1,5 +1,19 @@
 FROM jenkins/jenkins:lts
 USER root
-RUN apt-get update
-RUN apt install docker.io -y
+
+# Install Docker
+RUN apt-get update && \
+    apt-get -y install \
+    ca-certificates \
+    curl \
+    gnupg \
+    lsb-release && \
+    mkdir -p /etc/apt/keyrings && \
+    curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg && \
+    echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \
+    bionic stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null && \
+    apt-get update && \
+    apt-get -y install docker-ce docker-ce-cli containerd.io docker-compose-plugin
+
 RUN usermod -aG docker jenkins
+USER jenkins
